--- a/src/components/guess-validator/guess-validator.css
+++ b/src/components/guess-validator/guess-validator.css
@@ -1,22 +1,22 @@
 .guess-validator {
-    display: grid;
-    grid-template-areas: 
+  display: grid;
+  grid-template-areas:
     "top-left top-right"
     "bottom-left bottom-right";
 }
 
 .validator-border {
-    outline: #095256 solid 1px ;
+  outline: #095256 solid 1px;
 }
 
 .correct {
-    background-color: #2A9D8F;
+  background-color: #2a9d8f;
 }
 
 .almost {
-    background-color: #E9C46A;
+  background-color: #e9c46a;
 }
 
 .incorrect {
-    background-color: #264653;
+  background-color: #264653;
 }
